--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,11 @@
     transform: rotate(360deg);
   }
 }
+
+.background-dark {
+  background-color: #282c34;
+}
+
+.backgroud-white {
+background-color: antiquewhite;
+}
