--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,7 @@
 body {
   margin: 0;
-  color: beige;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  display: grid;
 }
 
 code {
@@ -30,3 +26,4 @@ code {
   margin: 0 auto;
   max-width: 320px;
 }
+
