--- a/src/pages/homepage/Home.module.css
+++ b/src/pages/homepage/Home.module.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Roboto', 'Arial Narrow Bold', sans-serif;
 }
 
 .main {
