--- a/src/pages/homepage/Home.module.css
+++ b/src/pages/homepage/Home.module.css
@@ -6,7 +6,8 @@
 
 .main {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: 300vh;
 }
 
 video {
@@ -20,17 +21,13 @@ video {
   top: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .overlay {
   position: absolute;
   top: 1;
   width: 100%;
-  height: 100%;
+  height: 300vh;
   background-color: rgba(0,0,0,.6);
   object-fit: cover;
   /* background-color: #000000cc; */
