--- a/src/pages/homepage/Home.module.css
+++ b/src/pages/homepage/Home.module.css
@@ -6,13 +6,15 @@
 
 .main {
   width: 100%;
-  min-height: 100vh;
   height: 300vh;
 }
 
 video {
+  position: absolute;
+  top: 2;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  height: 100vh;
   object-fit: cover;
 }
 /* Change content as you like according to typography's style */
