--- a/src/pages/homepage/Introduction.module.css
+++ b/src/pages/homepage/Introduction.module.css
@@ -1,6 +1,10 @@
 .main {
-    display: flex;
-    min-height: 100vh;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  position: absolute;
+  top: 0;
+  min-height: 100vh;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+
 }
