--- a/src/pages/aboutpage/Timeline.module.css
+++ b/src/pages/aboutpage/Timeline.module.css
@@ -11,9 +11,9 @@
 
 h1 {
   margin-top: 5vh;
-  color: white;
+  color: #87ceeb;
   font-weight: bold;
-  font-size: 4.5rem;
+  font-size: 4rem;
   margin-bottom: 5vh;
 }
 
@@ -28,5 +28,4 @@ h3 {
   display: "flex";
   justify-content: "center";
   align-items: "center";
-
 }
